Revert Stream.toList() to toList() method